# wondershot

./: .gitignore  Cargo.toml  Install-Wondershot.ps1  LICENSE  README.md  ROADMAP.md  install.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/wondershot-core/: Cargo.toml
crates/wondershot-core/src/: bgremove.rs  camera.rs  camera_macos.rs  camera_win.rs  cli.rs  clipboard.rs  editor.rs  ffmpeg.rs  imageops.rs  lib.rs  library.rs  opener.rs  paths.rs  settings.rs  sidecar.rs  video.rs
crates/wondershot-core/src/capture/: kwin.rs  macos.rs  mod.rs  native.rs  portal.rs  spectacle.rs  win.rs
crates/wondershot-core/src/record/: clock.rs  files.rs  mod.rs  pipeline.rs  portal.rs  recorder.rs  recorder_macos.rs  recorder_win.rs
docs/: platform-support.md
docs/superpowers/plans/: 2026-06-06-ci-matrix-prep.md  2026-06-06-ws-a-video-quick-wins.md  2026-06-06-ws-b-ai-foundation.md  2026-06-06-ws-d-capture-engine-spike.md  2026-06-07-desktop-checklist.md  2026-06-07-recorder-inprocess.md  2026-06-07-scroll-ui-ei-client.md  2026-06-07-sidecar-persistence.md  2026-06-07-simplifier-editor-backlog.md  2026-06-07-stitch-v2.md  2026-06-07-tray-recording-polish.md  2026-06-07-video-backlog.md  2026-06-07-windows-backends.md  2026-06-07-ws-c-capture-ux.md  2026-06-07-ws-c-desktop-checklist.md  2026-06-08-wondershot-m1-foundation.md  2026-06-08-wondershot-m2-capture-clipboard-library.md  2026-06-08-wondershot-m3-editor.md  2026-06-08-wondershot-m4-recorder.md  2026-06-08-wondershot-m5-video-settings-bgremoval.md  2026-06-08-wondershot-m6-packaging.md  2026-06-08-wondershot-m7-cutover-parity.md  2026-06-08-wondershot-m7-parity-checklist.md  2026-06-08-wondershot-tauri-rewrite-roadmap.md  2026-06-09-wondershot-m8-layout-parity.md
docs/superpowers/specs/: 2026-06-06-snagit-parity-design.md  2026-06-08-wondershot-tauri-rewrite-design.md
grabbit/: __init__.py  app.py  bubble.py  capture.py  capture_window.py  cli.py  editor.py  gallery.py  hotkey.py  imageops.py  items.py  record.py  selftest.py  settings.py  settings_dialog.py  share.py  video.py
grabbit/data/: grabbit.desktop
packaging/flatpak/: io.github.jackmusick.wondershot.yml
packaging/windows/: installer.iss  launch.py  winget-manifest.template.yaml  wondershot.spec
scripts/: Prepare-WindowsFfmpeg.ps1  test-install.sh
spikes/: cursor_halo_probe.md  inputcapture_probe.py  pause_resume_probe.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  graph.rs  hotkeys.rs  lib.rs  logging.rs  main.rs  media_server.rs  share.rs  watcher.rs
src/lib/: ipc.mock.ts  ipc.ts  library.ts  platform.ts  stores.ts  types.ts
src/lib/__tests__/: ipc.spec.ts  library.spec.ts  platform.spec.ts  stores.spec.ts  tokens.spec.ts
src/lib/capture/: nativeRegion.ts
src/lib/components/: CaptureHeader.svelte  CapturePanel.svelte  ContentView.svelte  Filmstrip.svelte  LibrarySidebar.svelte  PropertiesPanel.svelte  Settings.svelte  ZoomBar.svelte
src/lib/editor/: EditorCanvas.svelte  EditorToolbar.svelte  effects.ts  history.ts  model.ts  style.ts  tools.ts  zoom.ts
src/lib/editor/__tests__/: history.spec.ts  model.spec.ts  roundtrip.spec.ts  style.spec.ts  tools.spec.ts
src/lib/editor/tools/: arrowLine.ts  boxShapes.ts  destructive.ts  freehand.ts  index.ts  redact.ts  step.ts  text.ts
src/lib/editor/tools/__tests__/: arrowLine.spec.ts  boxShapes.spec.ts  destructive.spec.ts  freehand.spec.ts  redact.spec.ts  step.spec.ts  text.spec.ts  transform.spec.ts
src/lib/media/: browserRecorder.ts  camera.ts  devices.ts
src/lib/recorder/: control.ts  countdown.ts
src/lib/recorder/__tests__/: control.spec.ts  countdown.spec.ts
src/lib/styles/: global.css  tokens.css
src/lib/video/: VideoPlayer.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/bubble/: +page.svelte
src/routes/capture/: +page.svelte
src/routes/capture-actionbar/: +page.svelte
src/routes/countdown/: +page.svelte
src/routes/region-picker/: +page.svelte
src/routes/screen/: +page.svelte
tests/: _fakegst.py  test_aiclient.py  test_app_server_name.py  test_bgremove.py  test_capture_crop.py  test_capture_window_mode.py  test_cli_scroll_spike.py  test_clipboard.py  test_countdown.py  test_editor.py  test_editor_ai.py  test_editor_backlog.py  test_editor_sidecar.py  test_editor_simplify.py  test_ei.py  test_ffmpegutil.py  test_gallery.py  test_gallery_sidecar.py  test_gallery_toolbar.py  test_gallery_trash.py  test_hide_for_capture.py  test_hotkey.py  test_hotkey_rebind.py  test_imageops.py  test_items_serialize.py  test_kwin.py  test_launcher_command.py  test_msgraph.py  test_ocr.py  test_quickbar.py  test_record.py  test_record_live.py  test_record_pause_ui.py  test_record_pure.py  test_record_region.py  test_record_sync.py  test_redact.py  test_scroll_mode.py  test_scroll_pill.py  test_scrollcontroller.py  (+22 more)
tests-ui/: capture.spec.ts  editor-interaction.spec.ts  refshots.spec.ts
tests-ui/ref/qt/: README.md
wondershot/: __init__.py  aiclient.py  app.py  bgremove.py  bubble.py  capture.py  capture_window.py  cli.py  clipboard.py  countdown.py  editor.py  ei.py  ffmpegutil.py  gallery.py  hotkey.py  icons.py  imageops.py  items.py  kwin.py  msgraph.py  ocr.py  record.py  redact.py  scrollsource.py  selftest.py  settings.py  settings_dialog.py  share.py  sidecar.py  simplify.py  stitch.py  theme.py  video.py  wincapture.py  winrecord.py
wondershot/data/: wondershot.desktop
workflows/: ui-review.mjs
