[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wondershot"
version = "0.1.0"
description = "Snagit-style screenshot tool for Linux/Wayland: capture, gallery with drag-out, markup editor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jack Musick" }]
dependencies = ["PySide6>=6.6"]
keywords = ["screenshot", "wayland", "kde", "snagit", "annotation"]

[project.optional-dependencies]
spike = ["numpy"]  # WS-D scroll-stitch spike only; not a runtime dep

[project.scripts]
wondershot = "wondershot.cli:main"
grabbit = "wondershot.cli:main"  # legacy alias (existing hotkeys)

[project.optional-dependencies]
ai-local = ["rembg>=2.0", "onnxruntime>=1.16"]

[tool.setuptools.packages.find]
include = ["wondershot*"]

[tool.setuptools.package-data]
wondershot = ["data/*"]
