[package]
name = "wondershot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wondershot-core = { path = "../crates/wondershot-core" }
arboard = "3"
image = "0.25"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process"] }

[features]
# Opt-in AI background removal — forwards to wondershot-core's ONNX inference
# (load-dynamic; needs libonnxruntime + the u2net model at runtime). Release
# builds pass --features bgremove; the default build omits it.
bgremove = ["wondershot-core/bgremove-onnx"]

[lib]
name = "wondershot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
