[package]
name = "wondershot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wondershot-core = { path = "../crates/wondershot-core" }
arboard = "3"
dirs = "5"
image = "0.25"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process"] }
trash = "5"
# Native "Save as…" via the desktop file-chooser portal (DBus/ashpd) — works in
# the Flatpak sandbox and off the GTK main thread (async).
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
# Blocking HTTP for the AI-endpoint connectivity test + OneDrive Graph calls.
ureq = { version = "2", features = ["json"] }
# PKCE for the interactive OneDrive sign-in (S256 challenge + CSRF state).
sha2 = "0.10"
getrandom = "0.2"
# SigV4 presigning (S3) + Azure SAS for the Share flow.
hmac = "0.12"
# Native file drag-out (filmstrip → file manager copies the real file, not a URL).
tauri-plugin-drag = "2"
# Live library-folder watching (Qt parity: externally created captures appear
# in the filmstrip without a restart).
notify = "8"
# Loopback media streamer: WebKitGTK's GStreamer pipeline cannot stream from
# the asset:// custom scheme (MEDIA_ERR_SRC_NOT_SUPPORTED), so <video> plays
# from http://127.0.0.1:<port> with Range support instead.
tiny_http = "0.12"

[features]
# Opt-in AI background removal — forwards to wondershot-core's ONNX inference
# (load-dynamic; needs libonnxruntime + the u2net model at runtime). Release
# builds pass --features bgremove; the default build omits it.
bgremove = ["wondershot-core/bgremove-onnx"]

[lib]
name = "wondershot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
