[package]
name = "wondershot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = "0.25"
dirs = "5"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
zbus = "4"
gstreamer = "0.23"
gstreamer-base = "0.23"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["download-binaries"], optional = true }
ndarray = { version = "0.16", optional = true }

[features]
# AI background removal via ONNX Runtime (pulls a ~prebuilt onnxruntime binary).
# Off by default so the core builds without network/native-link deps; the pure
# preprocess/composite helpers compile and test regardless.
bgremove-onnx = ["dep:ort", "dep:ndarray"]

[dev-dependencies]
tempfile = "3"
