[package]
name = "wondershot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = "0.25"
dirs = "5"
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
zbus = "4"
gstreamer = "0.23"
gstreamer-base = "0.23"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-24"], optional = true }
ndarray = { version = "0.17", optional = true }

[features]
# AI background removal via ONNX Runtime. `ort` is built with `load-dynamic`:
# it dlopen()s libonnxruntime at runtime (resolved by `ensure_ort_dylib`), so the
# build never fetches a binary (the rc `download-binaries` script is broken
# upstream). Off by default; the pure preprocess/composite helpers compile and
# test regardless.
bgremove-onnx = ["dep:ort", "dep:ndarray"]

[dev-dependencies]
tempfile = "3"
